2001-08-26  Mikael Hallendal  <micke@codefactory.se>

	* src/book-index.c:
	(book_index_get_scrolled): don't want to emit signal when setting
	  selection mode. fixes bug #200.

	* ui/GNOME_DevHelp.ui: removed Edit-menu

	* src/devhelp-controller.c:
	(devhelp_controller_open): call devhelp_controller_emit_uri from
	  here. 
	(cmd_back_cb): don't use no GnomeVFSURI. Don't emit signal, done
	from devhelp_controller_open.
	(cmd_forward_cb): dito.

	* configure.in: bumped version to 0.1.99

	* src/GNOME_DevHelp.oaf.in.in: 
	- tagged names for translation.
	- removed moniker attribute.

	* src/devhelp-controller.c: removed debug printouts and an
	  outcommented line.

2001-08-26  Yanko Kaneti  <yaneti@declera.com>

	* configure.in:
	* Makefile.am: add --disable-install-schemas to the available 
	configure flags. When used skips all install gconf schemas steps.

2001-08-26  Mikael Hallendal  <micke@codefactory.se>

	* ui/GNOME_DevHelp_Controller.ui: 
	- added CmdBack and CmdForward. Added toolbar items.

	* src/history.[ch]: 
	- Again changed. This time to use strings instead of
	  Document+anchor. First it used URI's. Now it is very general.
	- Removed HistoryData struct.
	(history_data_new): removed.
	(history_goto): changed inargs.
	(history_go_forward): changed in/returns
	(history_go_back): dito.
	(history_get_current): dito.

	* src/devhelp-controller.c:
	- Added history support.
	(devhelp_controller_open): added/impl. broke out code from
	  impl_DevHelp_Controller_openURI. This is now also used in
	  callbacks from cmdForward and cmdBack. 
	(devhelp_controller_emit_uri): added/impl. broke out code from
	  devhelp_controller_uri_cb. This is now also used in callbacks
	  from cmdForward and cmdBack.
	(cmd_back_cb): added/impl. Handles when user presses toolbar
	  button Back. 
	(cmd_forward_cb): added/impl. Handles when user presses toolbar
	  button forward.
	(devhelp_controller_init): connect to history signals.
	(devhelp_controller_forward_exists_changed_cb):